# chairbot-control

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  CV1  CVcontrol4.cpp  Curve.yml  Makefile  README.md  cmake_install.cmake  execute.sh  line.yml  messenger.hpp  path_0.yml  runCV.sh  start.sh
test-socket/: package.json  sendonsocket.js  testsocket.js
